Add handler for categories in Fehlverhalten
